--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
             <script src="https://cdn.bootcss.com/Director/1.2.8/director.min.js"></script>
         <!--<![endif]-->
 
+        <script src="https://cdn.bootcss.com/jszip/3.1.5/jszip.min.js"></script>
         <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     </head>
     <body>
