--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
         <!-- css reset -->
         <link href="https://cdn.bootcss.com/normalize/8.0.0/normalize.min.css" rel="stylesheet">
 
+        <!-- icon -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+
         <!-- 仅ie9和其他现代浏览器开启路由 -->
         <!--[if (gte IE 9)|(!IE)]><!--> 
             <script src="https://cdn.bootcss.com/Director/1.2.8/director.min.js"></script>
