功能和插件更新

--- a/public/index.html
+++ b/public/index.html
@@ -7,19 +7,18 @@
         <link rel="icon" href="<%= BASE_URL %>favicon.ico">
         <title>reader</title>
         <!-- css reset -->
-        <link href="https://cdn.bootcss.com/normalize/8.0.0/normalize.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.0/normalize.css">
 
         <!-- icon -->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fortawesome/font-awesome@5.3.1/web-fonts-with-css/css/fontawesome-all.min.css">
 
 
         <!-- 仅ie9和其他现代浏览器开启路由 -->
         <!--[if (gte IE 9)|(!IE)]><!--> 
-            <script src="https://cdn.bootcss.com/Director/1.2.8/director.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/director@1.2.8/build/director.min.js"></script>
         <!--<![endif]-->
 
-        <script src="https://cdn.bootcss.com/jszip/3.1.5/jszip.min.js"></script>
-        <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.slim.min.js"></script>
     </head>
     <body>
         <noscript>
