--- a/public/index.html
+++ b/public/index.html
@@ -12,17 +12,16 @@
         <!-- icon -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fortawesome/font-awesome@5.3.1/web-fonts-with-css/css/fontawesome-all.min.css">
 
-
         <!-- 仅ie9和其他现代浏览器开启路由 -->
         <!--[if (gte IE 9)|(!IE)]><!--> 
             <script src="https://cdn.jsdelivr.net/npm/director@1.2.8/build/director.min.js"></script>
         <!--<![endif]-->
 
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
     </head>
     <body>
         <noscript>
-            <strong>We're sorry but template-vue-cli3 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+            <strong>doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
         </noscript>
         <div id="app"></div>
         <!-- built files will be auto injected -->
