--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,15 @@
         <!-- icon -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fortawesome/font-awesome@5.3.1/web-fonts-with-css/css/fontawesome-all.min.css">
 
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ion-rangeslider@2.3.0/css/ion.rangeSlider.min.css"/>
+
         <!-- 仅ie9和其他现代浏览器开启路由 -->
         <!--[if (gte IE 9)|(!IE)]><!--> 
             <script src="https://cdn.jsdelivr.net/npm/director@1.2.8/build/director.min.js"></script>
         <!--<![endif]-->
 
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/ion-rangeslider@2.3.0/js/ion.rangeSlider.min.js"></script>
     </head>
     <body>
         <noscript>
