--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
         <!--<![endif]-->
 
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/jquery/jquery-color@2.1.2/jquery.color.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/ion-rangeslider@2.3.0/js/ion.rangeSlider.min.js"></script>
     </head>
     <body>
