增加章节选择，引入iscroll

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,11 @@
         <!--<![endif]-->
 
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/gh/jquery/jquery-color@2.1.2/jquery.color.js"></script>
+        <!-- <script src="https://cdn.jsdelivr.net/gh/jquery/jquery-color@2.1.2/jquery.color.js"></script> -->
         <script src="https://cdn.jsdelivr.net/npm/ion-rangeslider@2.3.0/js/ion.rangeSlider.min.js"></script>
+
+        <!-- 滚动插件 -->
+        <script src="https://cdn.jsdelivr.net/npm/iscroll@5.2.0/build/iscroll.min.js"></script>
 
         <!-- moment -->
         <script src="https://cdn.jsdelivr.net/npm/moment@2.23.0/min/moment.min.js"></script>
