--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,16 @@
 
         <!-- moment -->
         <script src="https://cdn.jsdelivr.net/npm/moment@2.23.0/min/moment.min.js"></script>
+
+        <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8/hammer.min.js"></script>
+
+        <script src="https://cdn.jsdelivr.net/npm/vconsole@3.2.2/dist/vconsole.min.js"></script>
+        <script>
+            // init vConsole
+            var vConsole = new VConsole();
+        </script>
     </head>
-    <body>
+    <body ontouchmove="event.preventDefault()">
         <noscript>
             <strong>doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
         </noscript>
