--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,11 @@
 
         <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8/hammer.min.js"></script>
 
-        <script src="https://cdn.jsdelivr.net/npm/vconsole@3.2.2/dist/vconsole.min.js"></script>
+        <!-- <script src="https://cdn.jsdelivr.net/npm/vconsole@3.2.2/dist/vconsole.min.js"></script>
         <script>
             // init vConsole
             var vConsole = new VConsole();
-        </script>
+        </script> -->
     </head>
     <body ontouchmove="event.preventDefault()">
         <noscript>
